# CRUD-ERP-PYTHON

./: .gitignore  README.md  pyproject.toml
src/mini_erp/: config.py  main.py
src/mini_erp/db/: session.py
src/mini_erp/db/models/: __init__.py  customer.py  product.py
src/mini_erp/repositories/: customer_repo.py  product_repo.py
src/mini_erp/services/: customer_service.py  product_service.py
src/mini_erp/ui/: __init__.py  app.py
src/mini_erp/ui/views/: customer_view.py  product_view.py
src/mini_erp/utils/: validation.py
tests/: test_customer_service.py  test_product_service.py
