[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mini-erp"
version = "0.1.0"
description = "Mini ERP desktop (Tkinter) with clean architecture"
authors = [{ name = "You" }]
requires-python = ">=3.10"
dependencies = ["SQLAlchemy>=2.0", ]


[project.scripts]
mini-erp = "mini_erp.main:main"


[tool.black]
line-length = 100


[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"


[tool.mypy]
python_version = "3.10"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
ignore_missing_imports = true


[tool.setuptools.packages.find]
where = ["src"]